Fix Scrollbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 .menu-class {
   background-color: rgb(14, 32, 41);
@@ -45,7 +46,7 @@ h1 {
   margin-bottom: 80px;
 }
 .footer-class {
-   background-image: url("img/Subtract.png");
+  background-image: url("img/Subtract.png");
   background-color: black;
   object-fit: contain;
   min-height: 128px;
@@ -59,7 +60,7 @@ h1 {
 .footer-wrap {
   width: 1440px;
   min-height: 128px;
- 
+
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -78,6 +79,7 @@ h1 {
 }
 
 .main-images {
+  display: flex;
   width: 150px;
   height: 150px;
   border: solid 1px grey;
@@ -90,6 +92,7 @@ h1 {
   gap: 16px;
   height: auto;
   flex-wrap: wrap;
+  margin: 20px 20px;
 }
 dialog {
   border: none;
@@ -116,6 +119,7 @@ dialog[open] {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .dialog-main-image {
@@ -138,9 +142,9 @@ dialog[open] {
 }
 
 .images-Dialog button {
-  all: unset;
   cursor: pointer;
-  background-color: rgb(14, 32, 41);
+  background-color: transparent;
+  border: none;
 }
 .value-image {
   color: white;
